--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -15,10 +15,12 @@
   }
 }
 
-
 .header__logo {
   @media (min-width: $width-desktop+px) {
     justify-self: start;
+  }
+  svg {
+    fill: #62d0df;
   }
 }
 
