--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -25,14 +25,16 @@
 
   margin-bottom: 10px;
 
+  @media (min-width: $width-tablet+px) {
+    width: 350px;
+    height: 350px;
+  }
+
   @media (min-width: $width-desktop+px) {
     width: 550px;
     height: 550px;
 
     &:hover {
-      .promo__img {
-        // transform: scale(1.3) translateX(-30px) translateY(-30px);
-      }
       ~ .promo__text {
         text-decoration-color: #62d0df;
         text-underline-offset: 0.4em;
@@ -106,8 +108,7 @@ input[name="profile"] {
   width: 60px;
   height: 60px;
   background: chartreuse;
-  margin-right: 30px;
-  margin-bottom: 30px;
+
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -122,6 +123,10 @@ input[name="profile"] {
   &:hover {
     box-shadow: 0 0 10px 0;
   }
+  @media (min-width: $width-desktop+px) {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 .promo__contact {
@@ -131,7 +136,10 @@ input[name="profile"] {
   left: 0;
   width: 100%;
   height: 100%;
-  background: cyan;
+  // background: cyan;
+  background-color: #8bc6ec;
+  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+
   border-radius: 50%;
   transform: rotateX(180deg);
   backface-visibility: hidden;
@@ -143,6 +151,10 @@ input[name="profile"] {
   }
   .contacts__link {
     filter: brightness(0.5);
+    &:hover,
+    &:active {
+      filter: brightness(1);
+    }
   }
 }
 
@@ -151,26 +163,19 @@ input[name="profile"] {
   position: absolute;
   top: 0;
   left: 0;
-  width: 550px;
-  height: 550px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   transform-style: preserve-3d;
-  // z-index: 10;
-  transition: all 600ms;
-}
-.front {
-  background: #fff;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  backface-visibility: hidden;
-}
-.back {
-  background: #222;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  backface-visibility: hidden;
-  transform: rotateX(180deg);
+  transition: all 0.6s ease 0s;
+  @media (min-width: $width-tablet+px) {
+    width: 350px;
+    height: 350px;
+  }
+
+  @media (min-width: $width-desktop+px) {
+    width: 550px;
+    height: 550px;
+  }
 }
