--- a/css/style.css
+++ b/css/style.css
@@ -1027,6 +1027,10 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   height: 250px;
   position: relative;
   margin-bottom: 10px; }
+  @media (min-width: 767.98px) {
+    .promo__img-wrap {
+      width: 350px;
+      height: 350px; } }
   @media (min-width: 1300px) {
     .promo__img-wrap {
       width: 550px;
@@ -1097,8 +1101,6 @@ input[name="profile"]:checked ~ .rotate {
   width: 60px;
   height: 60px;
   background: chartreuse;
-  margin-right: 30px;
-  margin-bottom: 30px;
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -1111,6 +1113,10 @@ input[name="profile"]:checked ~ .rotate {
     font-size: 30px; }
   .promo__btn:hover {
     box-shadow: 0 0 10px 0; }
+  @media (min-width: 1300px) {
+    .promo__btn {
+      margin-right: 30px;
+      margin-bottom: 30px; } }
 
 .promo__contact {
   transition: all 0.5s ease-in 0s;
@@ -1119,7 +1125,8 @@ input[name="profile"]:checked ~ .rotate {
   left: 0;
   width: 100%;
   height: 100%;
-  background: cyan;
+  background-color: #8bc6ec;
+  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
   border-radius: 50%;
   transform: rotateX(180deg);
   -webkit-backface-visibility: hidden;
@@ -1131,35 +1138,28 @@ input[name="profile"]:checked ~ .rotate {
     flex-direction: column; }
   .promo__contact .contacts__link {
     filter: brightness(0.5); }
+    .promo__contact .contacts__link:hover, .promo__contact .contacts__link:active {
+      filter: brightness(1); }
 
 .rotate {
   z-index: 2;
   position: absolute;
   top: 0;
   left: 0;
-  width: 550px;
-  height: 550px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   transform-style: preserve-3d;
-  transition: all 600ms; }
-
-.front {
-  background: #fff;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden; }
-
-.back {
-  background: #222;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  transform: rotateX(180deg); }
+  transition: all 0.6s ease 0s; }
+  @media (min-width: 767.98px) {
+    .rotate {
+      width: 350px;
+      height: 350px; } }
+  @media (min-width: 1300px) {
+    .rotate {
+      width: 550px;
+      height: 550px; } }
 
 .github {
   background: black;
