--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -6,7 +6,14 @@
   grid-template-columns: 1fr;
   justify-items: center;
   align-items: center;
-  @media (orientation: landscape) and (max-height: 480px) {
+  // @media (orientation: landscape) {
+  //   height: auto;
+  // }
+  @media (max-height: 600px) {
+    height: auto;
+  }
+
+  @media (min-width: $width-tablet+px) and (max-height: 650px) {
     height: auto;
   }
 }
@@ -14,37 +21,40 @@
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
+  align-content: center;
   text-align: center;
+  height: 100%;
+  width: 100%;
 }
-.promo__img-wrap {
-  background-color: transparent;
-  width: 250px;
-  height: 250px;
-  position: relative;
-  // overflow: hidden;
+// .promo__img-wrap {
+//   background-color: transparent;
+//   width: 250px;
+//   height: 250px;
+//   position: relative;
+//   // overflow: hidden;
 
-  margin-bottom: 10px;
+//   margin-bottom: 10px;
 
-  @media (min-width: $width-tablet+px) {
-    width: 350px;
-    height: 350px;
-  }
+//   @media (min-width: $width-tablet+px) {
+//     width: 350px;
+//     height: 350px;
+//   }
 
-  @media (min-width: $width-desktop+px) {
-    width: 550px;
-    height: 550px;
+//   @media (min-width: $width-desktop+px) {
+//     width: 550px;
+//     height: 550px;
 
-    &:hover {
-      ~ .promo__text {
-        text-decoration-color: #62d0df;
-        text-underline-offset: 0.4em;
-      }
-      .promo__btn {
-        z-index: 5;
-      }
-    }
-  }
-}
+//     &:hover {
+//       ~ .promo__text {
+//         text-decoration-color: #62d0df;
+//         text-underline-offset: 0.4em;
+//       }
+//       .promo__btn {
+//         z-index: 5;
+//       }
+//     }
+//   }
+// }
 
 .promo__img {
   z-index: 2;
@@ -80,15 +90,16 @@
 }
 
 .promo__btn-wrap {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 50%;
-  height: 50%;
+  position: relative;
+  // right: 0;
+  // bottom: 0;
+  // width: 50%;
+  // height: 50%;
   background: transparent;
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+  align-self: center;
+  // align-items: flex-end;
+  // justify-content: flex-end;
 }
 input[name="profile"] {
   &:checked {
@@ -99,7 +110,8 @@ input[name="profile"] {
       }
     }
     ~ .rotate {
-      transform: translate(-50%, -50%) rotateX(180deg);
+      transform: rotateX(180deg);
+      // transform: translate(-50%, -50%) rotateX(180deg);
     }
   }
 }
@@ -108,7 +120,9 @@ input[name="profile"] {
   width: 60px;
   height: 60px;
   background: chartreuse;
-
+  position: absolute;
+  bottom: 0;
+  right: 0;
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -160,13 +174,9 @@ input[name="profile"] {
 
 .rotate {
   z-index: 2;
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  transform: translate(-50%, -50%);
   transform-style: preserve-3d;
   transition: all 0.6s ease 0s;
   @media (min-width: $width-tablet+px) {
