--- a/css/style.css
+++ b/css/style.css
@@ -1011,7 +1011,10 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   grid-template-columns: 1fr;
   justify-items: center;
   align-items: center; }
-  @media (orientation: landscape) and (max-height: 480px) {
+  @media (max-height: 600px) {
+    .promo {
+      height: auto; } }
+  @media (min-width: 767.98px) and (max-height: 650px) {
     .promo {
       height: auto; } }
 
@@ -1019,28 +1022,10 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
-  text-align: center; }
-
-.promo__img-wrap {
-  background-color: transparent;
-  width: 250px;
-  height: 250px;
-  position: relative;
-  margin-bottom: 10px; }
-  @media (min-width: 767.98px) {
-    .promo__img-wrap {
-      width: 350px;
-      height: 350px; } }
-  @media (min-width: 1300px) {
-    .promo__img-wrap {
-      width: 550px;
-      height: 550px; }
-      .promo__img-wrap:hover ~ .promo__text {
-        -webkit-text-decoration-color: #62d0df;
-                text-decoration-color: #62d0df;
-        text-underline-offset: 0.4em; }
-      .promo__img-wrap:hover .promo__btn {
-        z-index: 5; } }
+  align-content: center;
+  text-align: center;
+  height: 100%;
+  width: 100%; }
 
 .promo__img {
   z-index: 2;
@@ -1078,15 +1063,10 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   transition: text-decoration-color 300ms, text-underline-offset 300ms, -webkit-text-decoration-color 300ms; }
 
 .promo__btn-wrap {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 50%;
-  height: 50%;
+  position: relative;
   background: transparent;
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end; }
+  align-self: center; }
 
 input[name="profile"]:checked + .promo__btn {
   z-index: 5; }
@@ -1094,13 +1074,16 @@ input[name="profile"]:checked + .promo__btn {
     transform: rotate(135deg); }
 
 input[name="profile"]:checked ~ .rotate {
-  transform: translate(-50%, -50%) rotateX(180deg); }
+  transform: rotateX(180deg); }
 
 .promo__btn {
   z-index: 1;
   width: 60px;
   height: 60px;
   background: chartreuse;
+  position: absolute;
+  bottom: 0;
+  right: 0;
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -1143,13 +1126,9 @@ input[name="profile"]:checked ~ .rotate {
 
 .rotate {
   z-index: 2;
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  transform: translate(-50%, -50%);
   transform-style: preserve-3d;
   transition: all 0.6s ease 0s; }
   @media (min-width: 767.98px) {
