--- a/source/scss/blocks/header-menu.scss
+++ b/source/scss/blocks/header-menu.scss
@@ -18,16 +18,52 @@
   border: none;
 
   @media (max-width: $width-tablet+px) {
-    display: inline-block;
-    position: absolute;
-    top: 25px;
-    right: 20px;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
     padding: 0;
     outline: none;
     border: none;
-    width: 24px;
-    height: 18px;
-    box-shadow: 0 0 2px 0 black;
+    width: 48px;
+    height: 48px;
+    .header-menu__icon {
+      width: 24px;
+      height: 2px;
+      display: block;
+      background: black;
+      position: relative;
+
+      &::after,
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: black;
+        left: 0;
+        transition: transform 0.3s ease 0s;
+      }
+      &::after {
+        transform-origin: center;
+        bottom: 6px;
+      }
+      &::before {
+        transform-origin: center;
+        top: 6px;
+      }
+    }
+    &[aria-expanded="true"] {
+      .header-menu__icon {
+        height: 0;
+        &::after {
+          transform: translateY(7px) rotate(45deg);
+        }
+        &::before {
+          transform: translateY(-7px) rotate(-45deg);
+        }
+      }
+    }
   }
 }
