--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -25,17 +25,12 @@
 }
 
 .header-menu__toggle {
-  display: none;
-
   @media (max-width: $width-tablet+px) {
-    display: block;
-    padding: 5px;
     position: absolute;
     right: 20px;
-    top: 20px;
+    top: 10px;
   }
 }
-
 .site-list {
   display: flex;
   flex-wrap: wrap;
@@ -46,19 +41,33 @@
     position: absolute;
     top: 100%;
     right: 0;
-    left: 0;
     z-index: -1;
     background-color: #d9f0f7;
     visibility: hidden;
     opacity: 0;
-    transform: translateX(-100%);
+    transform: translateX(100%);
     transition: transform 0.3s ease-out, opacity 0.3s ease-out;
 
     &--open {
       visibility: visible;
       opacity: 1;
       transform: translateX(0);
+      background: rgba($color: chartreuse, $alpha: 0.7);
       z-index: 20;
+      width: max-content;
+      max-width: 100px;
+      flex-direction: column;
+      text-align: center;
+      border-top-left-radius: 20px;
+      border-bottom-left-radius: 20px;
+      padding: 10px;
+      box-shadow: var(--box-shadow);
+      font-weight: 700;
+      text-transform: uppercase;
+
+      .site-list__item {
+        margin: 0;
+      }
     }
   }
 }
@@ -76,7 +85,7 @@
   padding: 5px;
   font-size: 16px;
   line-height: 19px;
-  color: #4f4f4f;
+  color: black;
   cursor: pointer;
 }
 
