--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -6,9 +6,7 @@
   grid-template-columns: 1fr;
   justify-items: center;
   align-items: center;
-  // @media (orientation: landscape) {
-  //   height: auto;
-  // }
+  
   @media (max-height: 600px) {
     height: auto;
   }
@@ -17,6 +15,7 @@
     height: auto;
   }
 }
+
 .promo__container {
   display: grid;
   grid-template-columns: 1fr;
@@ -25,36 +24,16 @@
   text-align: center;
   height: 100%;
   width: 100%;
+
+  @media (min-width: $width-tablet+px) {
+    &:hover {
+      .promo__text {
+        text-decoration-color: #62d0df;
+        text-underline-offset: 0.4em;
+      }
+    }
+  }
 }
-// .promo__img-wrap {
-//   background-color: transparent;
-//   width: 250px;
-//   height: 250px;
-//   position: relative;
-//   // overflow: hidden;
-
-//   margin-bottom: 10px;
-
-//   @media (min-width: $width-tablet+px) {
-//     width: 350px;
-//     height: 350px;
-//   }
-
-//   @media (min-width: $width-desktop+px) {
-//     width: 550px;
-//     height: 550px;
-
-//     &:hover {
-//       ~ .promo__text {
-//         text-decoration-color: #62d0df;
-//         text-underline-offset: 0.4em;
-//       }
-//       .promo__btn {
-//         z-index: 5;
-//       }
-//     }
-//   }
-// }
 
 .promo__img {
   z-index: 2;
@@ -69,56 +48,55 @@
   border-radius: 50%;
   box-shadow: var(--shadow);
 }
+
 .promo__title {
   font-weight: 300;
   font-size: 36px;
   line-height: 42px;
   z-index: 1;
+
   @media (min-width: $width-tablet+px) {
     max-width: 350px;
   }
 }
+
 .promo__text {
   font-weight: bold;
   font-size: 20px;
   line-height: 23px;
   letter-spacing: 1px;
-  // font-style: italic;
   text-decoration: underline;
   text-underline-offset: 0.2em;
   transition: text-decoration-color 300ms, text-underline-offset 300ms;
 }
 
-.promo__btn-wrap {
+.promo__rotate-wrap {
   position: relative;
-  // right: 0;
-  // bottom: 0;
-  // width: 50%;
-  // height: 50%;
+  z-index: 1;
   background: transparent;
   display: flex;
   align-self: center;
-  // align-items: flex-end;
-  // justify-content: flex-end;
 }
+
 input[name="profile"] {
   &:checked {
     + .promo__btn {
-      z-index: 5;
+      box-shadow: 0 0 3px 0;
       span {
         transform: rotate(135deg);
       }
     }
+
     ~ .rotate {
       transform: rotateX(180deg);
-      // transform: translate(-50%, -50%) rotateX(180deg);
     }
   }
 }
+
 .promo__btn {
-  z-index: 1;
-  width: 60px;
-  height: 60px;
+  z-index: 5;
+  width: 48px;
+  height: 48px;
   background: chartreuse;
   position: absolute;
   bottom: 0;
@@ -129,14 +107,19 @@ input[name="profile"] {
   justify-content: center;
   box-shadow: var(--box-shadow);
   transition: all 0.3s ease 0s;
+
   span {
     transition: all 0.3s ease-in-out 0s;
     display: inline-block;
     font-size: 30px;
   }
-  &:hover {
-    box-shadow: 0 0 10px 0;
+
+  @media (min-width: $width-tablet+px) {
+    &:hover {
+      box-shadow: 0 0 10px 0;
+    }
   }
+
   @media (min-width: $width-desktop+px) {
     margin-right: 30px;
     margin-bottom: 30px;
@@ -150,21 +133,22 @@ input[name="profile"] {
   left: 0;
   width: 100%;
   height: 100%;
-  // background: cyan;
   background-color: #8bc6ec;
   background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
-
   border-radius: 50%;
   transform: rotateX(180deg);
   backface-visibility: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+
   .contacts__list {
     flex-direction: column;
   }
+
   .contacts__link {
     filter: brightness(0.5);
+
     &:hover,
     &:active {
       filter: brightness(1);
@@ -179,6 +163,7 @@ input[name="profile"] {
   border-radius: 50%;
   transform-style: preserve-3d;
   transition: all 0.6s ease 0s;
+
   @media (min-width: $width-tablet+px) {
     width: 350px;
     height: 350px;
