--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -25,6 +25,20 @@
   box-shadow: var(--shadow);
   position: relative;
 
+  &::-webkit-scrollbar {
+    height: 12px;
+    background: #e3a62c;
+    background: linear-gradient(to bottom right, #ffaa00, #ffdc68);
+    border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #a593f0;
+    background: linear-gradient(to bottom right, #a593f0, #773d72);
+    border-radius: 5px;
+    box-shadow: inset 2px 1px 7px #843eda;
+  }
+  
   @media (min-width: $width-tablet+px) {
     scroll-padding-left: 20px;
     scroll-margin-right: 20px;
