--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -17,7 +17,7 @@
 @import "blocks/skills.scss";
 @import "blocks/footer.scss";
 @import "blocks/contacts.scss";
-// @import "";
+@import "blocks/change-text.scss";
 // @import "";
 // @import "";
 // @import "";
