--- a/source/scss/blocks/skills.scss
+++ b/source/scss/blocks/skills.scss
@@ -1,7 +1,10 @@
 .skills {
   padding: 30px 0;
 }
-
+.skills__change-text {
+  margin: 0 auto;
+  justify-content: center;
+}
 .skills__list {
   background: #eaeaea8a;
   box-shadow: 0 0 10px 0 var(--opacity-black);
