--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1090,7 +1090,8 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   align-content: center;
   text-align: center;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  max-width: 75%; }
   @media (min-width: 767.98px) {
     .promo__container:hover .promo__text {
       -webkit-text-decoration-color: #62d0df;
