--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -24,6 +24,7 @@
   text-align: center;
   height: 100%;
   width: 100%;
+  max-width: 75%;
 
   @media (min-width: $width-tablet+px) {
     &:hover {
