--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -48,12 +48,12 @@
     min-height: auto;
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     column-gap: 41px;
     row-gap: 30px;
     grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
     box-shadow: none;
   }
+
   &:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -67,6 +67,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
     @media (min-width: $width-desktop+px) {
       content: "";
     }
@@ -78,12 +79,6 @@
   flex: 0 0 auto;
   border-radius: 15px;
   overflow: hidden;
-  // width: 0px;
-  // height: 0px;
-  // transition: all 0.5s ease, height 0.3s ease, opacity 0.1s ease;
-  // opacity: 0;
-  // position: absolute;
-  // transform: scale(0);
   z-index: -1;
   display: none;
 
@@ -109,16 +104,17 @@
     display: block;
     opacity: 1;
     position: relative;
-    // transform: scale(1);
     height: 100%;
     width: 100%;
     z-index: 3;
     animation: slit-in-vertical 0.45s ease-in-out 0s;
   }
+
   @media (min-width: $width-tablet+px) {
     flex: 0 0 45%;
     scroll-snap-align: start;
   }
+
   @media (min-width: $width-desktop+px) {
     flex: initial;
   }
@@ -160,7 +156,7 @@
   flex-direction: column;
   align-items: center;
   transition: all 0.5s ease 0s;
-  box-shadow: 0px -11px 11px 0px var(--opacity-black);
+  box-shadow: 0 -11px 11px 0 var(--opacity-black);
 
   @media (max-width: $width-tablet+px) {
     z-index: 5;
@@ -190,6 +186,7 @@
   text-transform: uppercase;
   font-size: 14px;
   line-height: 1.2;
+
   @media (min-width: $width-tablet+px) {
     font-size: 18px;
   }
@@ -202,8 +199,8 @@
   font-size: 12px;
   line-height: 14px;
   color: var(--basic-black);
-  text-align: center;
   text-align: justify;
+
   @media (min-width: $width-tablet+px) {
     margin: 0 0 32px;
     font-size: 16px;
@@ -221,11 +218,10 @@
   padding: 5px;
   font-size: 12px;
   line-height: 14px;
+
   @media (min-width: $width-desktop+px) {
     font-size: 16px;
     line-height: 18px;
-    width: 200px;
-    min-height: 50px;
   }
 }
 
@@ -248,6 +244,7 @@
   @media (min-width: $width-desktop+px) {
     &:hover {
       fill: rgba($color: black, $alpha: 0.7);
+
       span {
         transform: translateY(0);
       }
@@ -266,6 +263,7 @@
   bottom: 40px;
   overflow: hidden;
   fill: black;
+
   span {
     transition: all 0.5s ease 0s;
     transform: translateY(50px);
@@ -274,6 +272,7 @@
   @media (min-width: $width-desktop+px) {
     &:hover {
       fill: rgba($color: black, $alpha: 0.7);
+
       span {
         transform: translateY(0);
       }
