--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -1,4 +1,3 @@
-
 .form {
   width: 100%;
   padding: 36px 32px;
@@ -75,7 +74,7 @@
   color: #ffffff;
   height: 48px;
   margin-bottom: 30px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
   background: linear-gradient(91.17deg, #eb5d56 0.01%, #390a40 100.01%);
   border-radius: 4px;
 }
