--- a/source/scss/blocks/github.scss
+++ b/source/scss/blocks/github.scss
@@ -5,11 +5,6 @@
   align-items: center;
   justify-content: center;
   transition: all 0.5s ease 0s;
-
-  &:hover {
-    .github__link {
-    }
-  }
 }
 
 .github__link {
@@ -32,6 +27,6 @@
   }
 
   &:focus {
-    box-shadow: 0 0 3 0px 0 white;
+    box-shadow: 0 0 3 0 0 white;
   }
 }
