--- a/source/scss/blocks/skills.scss
+++ b/source/scss/blocks/skills.scss
@@ -1,10 +1,12 @@
 .skills {
   padding: 30px 0;
 }
+
 .skills__change-text {
   margin: 0 auto;
   justify-content: center;
 }
+
 .skills__list {
   background: #eaeaea8a;
   box-shadow: 0 0 10px 0 var(--opacity-black);
@@ -17,6 +19,7 @@
   opacity: 0;
   transform: skewX(315deg) translateX(-100%);
   transition: all 0.5s ease-in-out 0s;
+
   @media (min-width: $width-tablet+px) {
     column-gap: 50px;
   }
@@ -30,6 +33,7 @@
     }
   }
 }
+
 .skills__item {
   background: #eaeaea8a;
   border-radius: 10px;
@@ -39,9 +43,9 @@
   justify-content: center;
   text-transform: uppercase;
   font-weight: 500;
-  position: relative;
   overflow: hidden;
   position: relative;
+
   svg {
     width: 45px;
     height: 45px;
@@ -55,7 +59,7 @@
     text-shadow: 0 0 1px black;
   }
 
-  &:after {
+  &::after {
     content: "";
     position: absolute;
     top: 0;
@@ -68,7 +72,7 @@
     box-shadow: 0 0 60px 5px white;
   }
 
-  &:before {
+  &::before {
     content: "";
     position: absolute;
     top: 0;
@@ -83,20 +87,18 @@
 
   &:hover {
     span {
-      bottom: 0em;
+      bottom: 0;
       color: var(--link-hover-color);
       text-shadow: var(--btn-text-shadow);
     }
-    &:after {
+
+    &::after {
       left: 110%;
     }
 
-    &:before {
+    &::before {
       right: 110%;
     }
-  }
-
-  @media (min-width: $width-tablet+px) {
   }
 }
 
