--- a/source/scss/link-on-top.scss
+++ b/source/scss/link-on-top.scss
@@ -14,6 +14,7 @@
   transform: scale(0) rotate(180deg);
   visibility: hidden;
   transition: all 0.5s ease 0s;
+
   @media (min-width: $width-mobile+px) {
     width: 50px;
     height: 50px;
@@ -32,6 +33,7 @@
     clip-path: polygon(50% 0%, 0% 45%, 37% 45%, 37% 100%, 67% 100%, 67% 45%, 100% 45%);
     transition: background 0.5s ease 0s;
   }
+
   &--visible {
     transform: scale(1) rotate(0);
     opacity: 1;
@@ -40,7 +42,7 @@
   }
 
   .link-to-top__ball {
-    background: url(../img/basket-ball-img.svg) center no-repeat;
+    background: url("../img/basket-ball-img.svg") center no-repeat;
     background-size: contain;
     z-index: 12;
     display: flex;
@@ -61,9 +63,11 @@
     &:focus,
     &:active {
       opacity: 1;
+
       .link-to-top__ball {
         animation: bounce-top 0.9s both;
       }
+
       &::after {
         background: rgba($color: #000000, $alpha: 0.5);
       }
