--- a/source/scss/null.scss
+++ b/source/scss/null.scss
@@ -1,21 +1,18 @@
 * {
-	padding: 0px;
-	margin: 0px;
-	border: 0px;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
+
 *,
-*:before,
-*:after {
-	box-sizing: border-box;
-}
-:focus,
-:active {
-	outline: none;
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 a:focus,
 a:active {
-	outline: none;
+  outline: none;
 }
 
 aside,
@@ -23,59 +20,68 @@ nav,
 footer,
 header,
 section {
-	display: block;
+  display: block;
 }
 
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 
 body {
-	line-height: 1;
-	font-family: $fontfamily;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
+  line-height: 1;
+  font-family: $fontfamily;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
+
 input,
 button,
 textarea {
-	font-family: $fontfamily;
+  font-family: $fontfamily;
 }
+
 input::-ms-clear {
-	display: none;
+  display: none;
 }
+
 button {
-	cursor: pointer;
+  cursor: pointer;
 }
+
 button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
+  padding: 0;
+  border: 0;
 }
+
 a,
 a:visited {
-	text-decoration: none;
+  text-decoration: none;
 }
+
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
+
 ul li {
-	list-style: none;
+  list-style: none;
 }
+
 img {
-	vertical-align: top;
+  vertical-align: top;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	font-weight: inherit;
-	font-size: inherit;
+  font-weight: inherit;
+  font-size: inherit;
 }
