--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -24,9 +24,10 @@
   text-align: center;
   height: 100%;
   width: 100%;
-  max-width: 75%;
 
   @media (min-width: $width-tablet+px) {
+    max-width: 75%;
+
     &:hover {
       .promo__text {
         text-decoration-color: #62d0df;
@@ -55,6 +56,7 @@
   font-size: 36px;
   line-height: 42px;
   z-index: 1;
+  cursor: default;
 
   @media (min-width: $width-tablet+px) {
     max-width: 350px;
@@ -69,6 +71,7 @@
   text-decoration: underline;
   text-underline-offset: 0.2em;
   transition: text-decoration-color 300ms, text-underline-offset 300ms;
+  cursor: default;
 }
 
 .promo__rotate-wrap {
@@ -104,6 +107,7 @@ input[name="profile"] {
 }
 
 .promo__btn {
+  cursor: pointer;
   z-index: 5;
   width: 48px;
   height: 48px;
