--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -184,6 +184,9 @@ h6 {
   .page {
     background: #3a94a3; } }
 
+.page.lock {
+  overflow: hidden; }
+
 .main-title {
   font-size: clamp(20px, 3vw, 36px);
   color: #0b236f;
@@ -577,6 +580,56 @@ h6 {
                 animation: bounce-top 0.9s both; }
       .link-on-top:hover::after, .link-on-top:focus::after, .link-on-top:active::after {
         background: rgba(0, 0, 0, 0.5); } }
+
+.hello {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 50;
+  font-size: clamp(50px, 10vw, 100px);
+  color: #87b8d0bd;
+  background: #22356f;
+  opacity: 1;
+  transition: all 0.3s ease 0s;
+  overflow: hidden; }
+  .hello.loaded {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transform: translateY(-100%); }
+  .hello .hello__typing-text {
+    max-width: 90%;
+    text-align: center;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .hello span:not(.hello__typing-text) {
+    display: none; }
+
+.lucky {
+  min-height: 100vh;
+  background: url("../img/lucky-img.jpg") no-repeat;
+  background-size: cover;
+  background-position: left center;
+  background-attachment: fixed;
+  position: relative;
+  display: grid;
+  place-items: center; }
+
+.lucky__text {
+  width: auto;
+  height: auto;
+  font-size: clamp(50px, 10vw, 100px);
+  text-transform: uppercase;
+  font-weight: bold; }
 
 .header {
   position: relative; }
@@ -1081,7 +1134,8 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   align-content: center;
   text-align: center;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  position: relative; }
   @media (min-width: 767.98px) {
     .promo__container {
       max-width: 75%; }
