--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -7,6 +7,8 @@
 @import "animation.scss";
 @import "waves.scss";
 @import "link-on-top.scss";
+@import "blocks/hello.scss";
+@import "blocks/lucky.scss";
 @import "blocks/header.scss";
 @import "blocks/header-menu.scss";
 @import "blocks/catalog.scss";
