--- a/source/scss/animation.scss
+++ b/source/scss/animation.scss
@@ -253,3 +253,36 @@
     opacity: 1;
   }
 }
+// hello btn
+@keyframes ticker {
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    transform: rotate(-15deg);
+  }
+  20%,
+  40%,
+  60% {
+    transform: rotate(15deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  90% {
+    transform: rotate(-10deg);
+  }
+}
+
+@keyframes wakeup {
+  0% {
+    transform: rotate(180deg) scale(0);
+  }
+  100% {
+    transform: rotate(180deg) scale(1);
+  }
+}
