--- a/source/scss/blocks/hello.scss
+++ b/source/scss/blocks/hello.scss
@@ -13,14 +13,15 @@
   color: #87b8d0bd;
   background: #22356f;
   opacity: 1;
-  transition: all 0.3s ease 0s;
+  transition: transform 1s ease 0s, opacity 0.5s ease 0.2s, border-radius 0.5s ease 0s;
   overflow: hidden;
 
   &.loaded {
     opacity: 0;
-    visibility: hidden;
     pointer-events: none;
-    transform: translateY(-100%);
+    transform: translateY(-100%) scale(0);
+    // border-radius: 0 0 50% 50%;
+    border-radius: 50%;
   }
 
   .hello__typing-text {
@@ -34,5 +35,26 @@
   }
   span:not(.hello__typing-text) {
     display: none;
+  }
+}
+
+.hello-btn {
+  cursor: pointer;
+  z-index: 50;
+  position: absolute;
+  top: 0;
+  left: 90%;
+  border: 0;
+  background: transparent;
+  transform: rotate(0) scale(0);
+  animation: wakeup 1s ease 2s alternate forwards;
+
+  svg {
+    pointer-events: none;
+    animation: ticker 5s ease-out 2s 2 alternate forwards;
+    transform-origin: bottom center;
+  }
+  @media (max-width: 500px) {
+    left: 0;
   }
 }
